# GhostWeight

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/: final_table.py  perplexity_eval_v2.py  predictor_overhead.py  predictor_tax.py  speedup_curve_v2.py  static_mask_perplexity.py  static_mask_speedup.py  test_library.py
data/: async_test.json  final_paper_table.json  perplexity_curve.json  phase1_final.json  phase2_results.json  phase3_final.json  phase3_results.json  predictor_overhead.json  predictor_tax.json  speedup_curve_v2.json  static_mask_perplexity.json  static_mask_results.json  weight_index.json
ghostweight/: __init__.py  ghostgate.py
kernels/: ghost_engine.h  ghost_kernel.cu  ghost_sparse_matmul.cu  ghost_tiled.cu
prototypes/: async_pipe_test_torch.py  build_weight_index.py  ghost_predictor_v2.py  ghost_streamer.py  hardware_benchmark_v2.py  qwen_ghostgate_test_4bit.py  scan_sparsity.py  threshold_sweep.py  verify_ghostgate_v2.py
